--- a/src/main/resources/fxml/CreatePanel.fxml
+++ b/src/main/resources/fxml/CreatePanel.fxml
@@ -1,36 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="720.0" prefWidth="384.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.note.controllers.ControllerCreateAccount">
+<AnchorPane prefHeight="400.0" prefWidth="384.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.note.gui.controllers.ControllerCreateAccount">
    <children>
       <Text layoutX="20.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create your personal account" />
       <Text layoutX="26.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
-      <Text layoutX="23.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email address" wrappingWidth="72.48046875" />
-      <Text layoutX="20.0" layoutY="332.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
+      <Text layoutX="26.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
       <TextField fx:id="usernameTextField" layoutX="23.0" layoutY="90.0" prefHeight="25.0" prefWidth="340.0" />
-      <TextField fx:id="emailTextField" layoutX="21.0" layoutY="203.0" prefHeight="25.0" prefWidth="340.0" />
-      <TextField fx:id="passwordTextField" layoutX="20.0" layoutY="344.0" prefHeight="25.0" prefWidth="340.0" />
-      <Text layoutX="25.0" layoutY="382.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Make sure it's at least 15 characters OR at least 8 characters including a number and a lowercase letter." wrappingWidth="339.8359375" />
+      <TextField fx:id="passwordTextField" layoutX="26.0" layoutY="185.0" prefHeight="25.0" prefWidth="340.0" />
       <Text layoutX="24.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This will be your username. " />
-      <Text layoutX="21.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="We’ll occasionally send updates about your account to this inbox. We’ll never share your email address with anyone." wrappingWidth="339.8359375" />
-      <RadioButton layoutX="25.0" layoutY="572.0" mnemonicParsing="false" text="I am a boss">
-         <toggleGroup>
-            <ToggleGroup fx:id="radioButttons" />
-         </toggleGroup>
-      </RadioButton>
-      <RadioButton layoutX="263.0" layoutY="572.0" mnemonicParsing="false" text="Find your boss" toggleGroup="$radioButttons" />
-      <TextField fx:id="BossTextField" disable="true" layoutX="263.0" layoutY="626.0" prefHeight="25.0" prefWidth="99.0" />
-      <Text fx:id="bossText" disable="true" layoutX="263.0" layoutY="614.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Boss username" />
-      <Button layoutX="22.0" layoutY="681.0" mnemonicParsing="false" onAction="#createAccount" text="Create an account" />
-      <Text fx:id="usernameError" layoutX="24.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong username" visible="false" />
-      <Text fx:id="emailError" layoutX="22.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong email" visible="false" />
-      <Text fx:id="passwordError" layoutX="25.0" layoutY="414.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong password" visible="false" />
-      <Text fx:id="bossError" layoutX="263.0" layoutY="664.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong data" visible="false" />
+      <Button layoutX="23.0" layoutY="308.0" mnemonicParsing="false" onAction="#createAccount" text="Create an account" />
+      <Text fx:id="usernameError" fill="RED" layoutX="24.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong username" visible="false" />
+      <CheckBox fx:id="bossCheckBox" layoutX="29.0" layoutY="243.0" mnemonicParsing="false" text="I am a boss" />
    </children>
 </AnchorPane>
