--- a/src/main/resources/fxml/NotesPanel.fxml
+++ b/src/main/resources/fxml/NotesPanel.fxml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.note.gui.controllers.ControllerNote">
    <children>
-      <MenuBar>
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#addNote" text="Add note" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
+      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="600.0" VBox.vgrow="NEVER">
+         <children>
+            <TextField fx:id="textField" HBox.hgrow="ALWAYS" />
+            <Button mnemonicParsing="false" onAction="#addNote" text="Add reminder" HBox.hgrow="ALWAYS" />
+         </children>
+      </HBox>
       <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
         <columns>
           <TableColumn fx:id="idTableColumn" prefWidth="67.0" text="Id" />
