--- a/src/main/resources/fxml/BossMainPanel.fxml
+++ b/src/main/resources/fxml/BossMainPanel.fxml
@@ -26,7 +26,7 @@
          <contextMenu>
             <ContextMenu>
               <items>
-                <MenuItem mnemonicParsing="false" text="Add reminder" onAction="#openNotes" />
+                <MenuItem mnemonicParsing="false" onAction="#openNotes" text="Add reminder" />
               </items>
             </ContextMenu>
          </contextMenu>
@@ -57,7 +57,7 @@
                   <Button mnemonicParsing="false" onAction="#search" text="Search" />
                </children>
             </HBox>
-            <ListView fx:id="listView" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+            <ListView fx:id="listView" onMouseClicked="#addEmpolyee" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
          </children>
       </VBox>
    </right>
