--- a/src/main/resources/fxml/boss/BossMainPanel.fxml
+++ b/src/main/resources/fxml/boss/BossMainPanel.fxml
@@ -17,8 +17,8 @@
    <center>
       <TableView fx:id="mainTableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn fx:id="idTableColumn" prefWidth="75.0" text="Id" />
-          <TableColumn fx:id="usernameTableColumn" prefWidth="135.0" text="Username" />
+          <TableColumn fx:id="idTableColumn" editable="false" prefWidth="75.0" sortable="false" text="Id" />
+          <TableColumn fx:id="usernameTableColumn" editable="false" prefWidth="135.0" sortable="false" text="Username" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
