--- a/src/main/resources/fxml/login/LoginPanel.fxml
+++ b/src/main/resources/fxml/login/LoginPanel.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
@@ -8,11 +9,11 @@
 <AnchorPane prefHeight="319.0" prefWidth="291.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.note.gui.controllers.login.LoginPanelController">
    <children>
       <TextField fx:id="usernameTextField" layoutX="71.0" layoutY="74.0" />
-      <TextField fx:id="passwordTextField" layoutX="71.0" layoutY="138.0" />
       <Text layoutX="74.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username or email address" />
       <Text layoutX="74.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
       <Button layoutX="69.0" layoutY="189.0" mnemonicParsing="false" onAction="#signIn" prefHeight="25.0" prefWidth="149.0" text="Sign in" />
       <Text fx:id="incorrectData" fill="RED" layoutX="59.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Incorrect username or password." visible="false" />
       <Text layoutX="39.0" layoutY="273.0" onMouseClicked="#accountCreate" strokeType="OUTSIDE" strokeWidth="0.0" text="New to NoteSystem? Create an account." />
+      <PasswordField fx:id="passwordTextField" layoutX="69.0" layoutY="133.0" prefHeight="25.0" prefWidth="149.0" />
    </children>
 </AnchorPane>
