--- a/src/main/resources/fxml/user/UserMainPanel.fxml
+++ b/src/main/resources/fxml/user/UserMainPanel.fxml
@@ -10,10 +10,10 @@
       <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="319.0" VBox.vgrow="ALWAYS" />
       <TableView fx:id="tableView" onMouseClicked="#doubleClick" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
         <columns>
-          <TableColumn fx:id="idTableColumn" prefWidth="75.0" text="Id" />
-          <TableColumn fx:id="messageTableColumn" prefWidth="75.0" text="Message" />
-            <TableColumn fx:id="dateTableColumn" prefWidth="75.0" text="Date" />
-            <TableColumn fx:id="doneTableColumn" prefWidth="75.0" text="Done" />
+          <TableColumn fx:id="idTableColumn" editable="false" prefWidth="75.0" sortable="false" text="Id" />
+          <TableColumn fx:id="messageTableColumn" editable="false" prefWidth="75.0" sortable="false" text="Message" />
+            <TableColumn fx:id="dateTableColumn" editable="false" prefWidth="75.0" sortable="false" text="Date" />
+            <TableColumn fx:id="doneTableColumn" prefWidth="75.0" sortable="false" text="Done" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
