--- a/src/main/resources/fxml/login/CreatePanel.fxml
+++ b/src/main/resources/fxml/login/CreatePanel.fxml
@@ -6,16 +6,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="384.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.note.gui.controllers.login.CreateAccountController">
+<AnchorPane prefHeight="448.0" prefWidth="384.0" stylesheets="@../../css/Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.note.gui.controllers.login.CreateAccountController">
    <children>
-      <Text layoutX="20.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create your personal account" />
-      <Text layoutX="26.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
-      <Text layoutX="26.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-      <TextField fx:id="usernameTextField" layoutX="23.0" layoutY="90.0" prefHeight="25.0" prefWidth="340.0" />
-      <TextField fx:id="passwordTextField" layoutX="26.0" layoutY="185.0" prefHeight="25.0" prefWidth="340.0" />
-      <Text layoutX="24.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This will be your username. " />
-      <Button layoutX="23.0" layoutY="308.0" mnemonicParsing="false" onAction="#createAccount" text="Create an account" />
-      <Text fx:id="usernameError" fill="RED" layoutX="24.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong username" visible="false" />
-      <CheckBox fx:id="bossCheckBox" layoutX="29.0" layoutY="243.0" mnemonicParsing="false" text="I am a boss" />
+      <Text layoutX="21.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h2" text="Create your personal account" />
+      <Text layoutX="24.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h3" text="Username" />
+      <Text layoutX="24.0" layoutY="239.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h3" text="Password" />
+      <TextField fx:id="usernameTextField" layoutX="21.0" layoutY="156.0" prefHeight="25.0" prefWidth="340.0" />
+      <TextField fx:id="passwordTextField" layoutX="24.0" layoutY="251.0" prefHeight="25.0" prefWidth="340.0" />
+      <Text layoutX="22.0" layoutY="194.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h4" text="This will be your username. " />
+      <Button layoutX="21.0" layoutY="374.0" mnemonicParsing="false" onAction="#createAccount" text="Create an account" />
+      <Text fx:id="usernameError" fill="RED" layoutX="22.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong username" visible="false" />
+      <CheckBox fx:id="bossCheckBox" layoutX="27.0" layoutY="309.0" mnemonicParsing="false" text="I am the boss" />
    </children>
 </AnchorPane>
